--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "baseUrl": ".",
     "paths": {
       "components/*": ["src/components/*"],
+      "screens/*": ["src/screens/*"],
       "assets/*": ["assets/*"]
     }
   }
