--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
     "babel-plugin-module-resolver": "^5.0.0",
+    "miragejs": "^0.1.47",
     "typescript": "^4.9.4"
   },
   "private": true
