--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/webpack-config": "^18.0.1",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
+    "@reduxjs/toolkit": "^1.9.3",
     "expo": "~48.0.10",
     "expo-linear-gradient": "^12.1.2",
     "expo-status-bar": "~1.4.4",
@@ -23,7 +24,8 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
