--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,10 @@
       "@/*": ["./*"],
       "components/*": ["src/components/*"],
       "screens/*": ["src/screens/*"],
-      "assets/*": ["assets/*"]
+      "hooks/*": ["src/hooks/*"],
+      "assets/*": ["assets/*"],
+      "context/*": ["src/context/*"],
+      "services/*": ["src/services/*"]
     }
   }
 }
