--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-web": "~0.18.10",
+    "react-native-web-swiper": "^2.2.4",
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
