--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.3",
     "expo": "~48.0.10",
+    "expo-font": "~11.1.1",
     "expo-linear-gradient": "^12.1.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
