--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -31,7 +32,8 @@
     "react-native-tab-view": "^3.5.1",
     "react-native-web": "~0.18.10",
     "react-native-web-swiper": "^2.2.4",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "react-responsive": "^9.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
