--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~48.0.10",
     "expo-font": "~11.1.1",
     "expo-linear-gradient": "^12.1.2",
+    "expo-linking": "~4.0.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
