--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],
+      "@/*": ["src/*"],
       "components/*": ["src/components/*"],
       "screens/*": ["src/screens/*"],
       "hooks/*": ["src/hooks/*"],
