--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-linear-gradient": "^12.1.2",
     "expo-linking": "~4.0.1",
     "expo-status-bar": "~1.4.4",
+    "formik": "^2.2.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
@@ -35,7 +36,8 @@
     "react-native-web": "~0.18.10",
     "react-native-web-swiper": "^2.2.4",
     "react-redux": "^8.0.5",
-    "react-responsive": "^9.0.2"
+    "react-responsive": "^9.0.2",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
