--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/cli-color": "^2.0.2",
     "@types/react": "~18.0.14",
     "babel-plugin-module-resolver": "^5.0.0",
+    "cli-color": "^2.0.3",
     "miragejs": "^0.1.47",
     "typescript": "^4.9.4"
   },
