--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "main": "index.tsx",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:ios": "eas build -p ios -e development --local --output ./build/ios.tar.gz"
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
@@ -17,6 +18,8 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.3",
     "expo": "~48.0.10",
+    "expo-build-properties": "~0.6.0",
+    "expo-dev-client": "~2.2.1",
     "expo-font": "~11.1.1",
     "expo-linear-gradient": "^12.1.2",
     "expo-linking": "~4.0.1",
@@ -46,6 +49,8 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "cli-color": "^2.0.3",
     "miragejs": "^0.1.47",
+    "react-native-flipper": "^0.190.0",
+    "redux-flipper": "^2.0.2",
     "typescript": "^4.9.4"
   },
   "private": true
