--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-font": "~11.1.1",
     "expo-linear-gradient": "^12.1.2",
     "expo-linking": "~4.0.1",
+    "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
     "formik": "^2.2.9",
     "react": "18.2.0",
