--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "tech-news-app",
+    "name": "Tech News",
     "slug": "tech-news-app",
     "version": "1.0.0",
     "orientation": "portrait",
