--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-linking": "~4.0.1",
     "expo-secure-store": "~12.1.1",
     "expo-status-bar": "~1.4.4",
+    "expo-web-browser": "~12.1.1",
     "formik": "^2.2.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
