--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/react": "~18.0.14",
     "babel-plugin-module-resolver": "^5.0.0",
     "cli-color": "^2.0.3",
+    "jwt-decode": "^3.1.2",
     "miragejs": "^0.1.47",
     "react-native-flipper": "^0.190.0",
     "redux-flipper": "^2.0.2",
