--- a/package.json
+++ b/package.json
@@ -49,10 +49,17 @@
     "@babel/core": "^7.20.0",
     "@types/cli-color": "^2.0.2",
     "@types/react": "~18.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
     "babel-plugin-module-resolver": "^5.0.0",
     "cli-color": "^2.0.3",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
     "jwt-decode": "^3.1.2",
     "miragejs": "^0.1.47",
+    "prettier": "^2.8.8",
     "react-native-flipper": "^0.190.0",
     "redux-flipper": "^2.0.2",
     "typescript": "^4.9.4"
